<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colordefondo"
    tools:context="app.production.samipc.mysidurapp1.SelecionRezo">

    <ImageView
        android:id="@+id/sidurImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagensidur" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fechahoyview"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:text="@string/seleccion_de_rezo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/sidurImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fechahoyview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sidurImage"
        android:layout_alignStart="@+id/rezosdehoyboton"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/la_hora_es"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/rezosdehoyboton"
        app:layout_constraintTop_toBottomOf="@+id/sidurImage" />

    <TextView
        android:id="@+id/yomview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignEnd="@+id/rezosdehoyboton"
        android:layout_alignRight="@+id/rezosdehoyboton"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="A Yom"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toEndOf="@+id/fechahoyview"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/rezosdehoyboton"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_above="@+id/todolosrezosboton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:background="@drawable/botonmarron3"
        android:onClick="seleccionahora"
        android:text="@string/rezos_de_hoy"
        android:textColor="#FFEB3B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fechahoyview" />

    <Button
        android:id="@+id/todolosrezosboton"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/rezosdehoyboton"
        android:layout_alignLeft="@+id/rezosdehoyboton"
        android:layout_centerVertical="true"
        android:background="@drawable/botonmarron3"
        android:onClick="seleccionatodo"
        android:text="@string/todos_los_rezos"
        android:textColor="#FFEB3B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/rezosdehoyboton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rezosdehoyboton"
        app:layout_constraintTop_toBottomOf="@+id/rezosdehoyboton" />

    <ImageView
        android:id="@+id/imageHoliday"
        android:layout_width="86dp"
        android:layout_height="84dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todolosrezosboton"
        app:srcCompat="@drawable/januquilladia1" />

    <TextView
        android:id="@+id/yomholiday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/happyjanuca"
        android:textColor="#b71c1c"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageHoliday"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>
