<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colordefondo"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.production.samipc.mysidurapp1.SeleccionaRezoShajrit"
    tools:showIn="@layout/activity_selecciona_rezo_shajrit">

    <ImageView
        android:id="@+id/sidurImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagensidur" />

    <Button
        android:id="@+id/botonshajrit"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/verhora"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/botonmarron3"
        android:fontFamily="sans-serif"
        android:onClick="leershajrit"
        android:text="@string/todo_shajrit"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verhora" />

    <Button
        android:id="@+id/buttonTallit"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/botonshajrit"
        android:layout_alignStart="@+id/botonshajrit"
        android:layout_alignLeft="@+id/botonshajrit"
        android:background="@drawable/botonmarron3"
        android:fontFamily="sans-serif"
        android:onClick="ponerTallit"
        android:text="@string/bencici_n_tallit"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/botonshajrit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/botonshajrit"
        app:layout_constraintTop_toBottomOf="@+id/botonshajrit" />

    <Button
        android:id="@+id/buttonTefillin"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/buttonTallit"
        android:layout_alignStart="@+id/buttonTallit"
        android:layout_alignLeft="@+id/buttonTallit"
        android:background="@drawable/botonmarron3"
        android:fontFamily="sans-serif"
        android:onClick="ponerTefillin"
        android:text="@string/bencici_n_tefillin"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonTallit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonTallit"
        app:layout_constraintTop_toBottomOf="@+id/buttonTallit" />

    <Button
        android:id="@+id/buttonBirkotHashajar"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/buttonTefillin"
        android:layout_alignStart="@+id/buttonTefillin"
        android:layout_alignLeft="@+id/buttonTefillin"
        android:background="@drawable/botonmarron3"
        android:fontFamily="sans-serif"
        android:onClick="birkotHashajar"
        android:text="Birkot Hashajar ברכות השחר"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonTefillin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonTefillin"
        app:layout_constraintTop_toBottomOf="@+id/buttonTefillin" />

    <Button
        android:id="@+id/buttonHodu"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/buttonBirkotHashajar"
        android:layout_alignStart="@+id/buttonBirkotHashajar"
        android:layout_alignLeft="@+id/buttonBirkotHashajar"
        android:background="@drawable/botonmarron3"
        android:fontFamily="sans-serif"
        android:onClick="hodu"
        android:text="HODU   הודוּ"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonBirkotHashajar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonBirkotHashajar"
        app:layout_constraintTop_toBottomOf="@+id/buttonBirkotHashajar" />

    <Button
        android:id="@+id/buttonShemaIsrael"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/buttonHodu"
        android:layout_alignStart="@+id/buttonHodu"
        android:layout_alignLeft="@+id/buttonHodu"
        android:background="@drawable/botonmarron3"
        android:fontFamily="sans-serif"
        android:onClick="shemaIsrael"
        android:text="Shema Israel  שְמַע יִשרָאֵל"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/buttonHodu"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonHodu"
        app:layout_constraintTop_toBottomOf="@+id/buttonHodu" />

    <Button
        android:id="@+id/buttonAmida"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/buttonShemaIsrael"
        android:layout_alignStart="@+id/buttonShemaIsrael"
        android:layout_alignLeft="@+id/buttonShemaIsrael"
        android:background="@drawable/botonmarron3"
        android:fontFamily="sans-serif"
        android:onClick="amida"
        android:text="Shemoneh Esrei  תפילת העמידה"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/buttonShemaIsrael"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/buttonShemaIsrael"
        app:layout_constraintTop_toBottomOf="@+id/buttonShemaIsrael" />

    <TextView
        android:id="@+id/verhora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sidurImage"
        android:layout_alignStart="@+id/botonshajrit"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/la_hora_es"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/yomview"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sidurImage" />

    <TextView
        android:id="@+id/yomview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sidurImage"
        android:layout_alignEnd="@+id/botonshajrit"
        android:layout_alignRight="@+id/botonshajrit"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="84dp"
        android:text="A Yom"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sidurImage" />

</android.support.constraint.ConstraintLayout>
